Fri Feb 29 09:59:23 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* autogen.sh: Run autoreconf with -f.
	* tools/config.guess, tools/config.sub, tools/depcomp,
	  tools/install-sh, tools/ylwrap: Update.

Thu Feb 28 10:47:22 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Terminate MAN_NAME at .ie or .if conditionals
	  (Debian bug #467444).

Sun Feb 17 17:17:16 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/manp.c (def_path): Fix brace indentation.

Sun Feb 17 17:13:55 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* gnulib: Import the strsignal module.
	* lib/pipeline.c (pipeline_wait): Call strsignal rather than
	  xstrsignal.
	* lib/xstrsignal.c: Remove.
	* lib/README (xstrsignal): Remove.
	* lib/Makefile.am (libman_a_SOURCES): Remove xstrsignal.c.
	* include/manconfig.h.in (xstrsignal): Remove.
	* m4/man-strsignal.m4: Remove.
	* configure.ac (MAN_FUNC_STRSIGNAL): Remove.

Sun Feb 17 16:59:22 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* Makefile.in, aclocal.m4, config.h.in, configure, docs/Makefile.in,
	  gnulib, lib/Makefile.in, libdb/Makefile.in, man/Makefile.in,
	  man/de/Makefile.in, man/es/Makefile.in, man/fr/Makefile.in,
	  man/it/Makefile.in, man/ja/Makefile.in, manual/Makefile.in,
	  src/Makefile.in, tools/Makefile.in: Upgrade to Automake 1.10.1 and
	  Gnulib 20080201.

Mon Feb  4 08:28:33 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/man_db.conf.in: Make /usr/local/share/man mandatory rather
	  than /usr/local/man (thanks, Reuben Thomas; Debian bug #463892).

Fri Feb  1 09:01:34 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/replace.sin.in: Strip off ".if !'po4a'hide' " from input
	  manual pages. It's a no-op except for po4a's purposes, and
	  removing it helps non-groff manual page renderers.

Mon Jan 28 08:54:47 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* docs/man-db.lsm: Update to 2.5.1.

Mon Jan 28 08:47:51 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.1.